[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
fdlimit = "0.2.1"
function_name = "0.3.0"
crossbeam-channel = "0.5"
crossbeam = "0.8"
derive_more= { version = "0.99"}
shared = { path = "shared"} 
mime = "0.3.16"
tempfile = "3.0.7"
semver = "1.0.16"
chrono = "0.4.19"
wry = { version = "0.23.4" }
tokio-util = "0.7.7"
either = "1.6.1"
dirs = "4.0.0"
# kit = { path = "kit" }
clap = { version = "4.0.32", features = ["derive"] }
dioxus-desktop = { version = "0.3.0", features = ["transparent"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
rand = "0.8.4"
base64 = "0.20.0"
lipsum = "0.8.2"
names = "0.14.0"
substring = "1.4.5"
log = "0.4.17"
titlecase = "2.2.1"
image = "0.24.5"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["dialog-all", "fs-all"] }
tokio = { version = "1.24.1", features = ["full"] }
libp2p = "0.50.0"


warp = { git = "https://github.com/Satellite-im/Warp", rev = "cc7a82848eb13ace61ff6db94f521ef1a3229a68" }
warp-mp-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "cc7a82848eb13ace61ff6db94f521ef1a3229a68" }
warp-rg-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "cc7a82848eb13ace61ff6db94f521ef1a3229a68" }
warp-fs-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "cc7a82848eb13ace61ff6db94f521ef1a3229a68" }

once_cell = "1.13"

warp-fs-storj = { git = "https://github.com/Satellite-im/Warp" }
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
